--- a/Back/src/ProEventos.API/appsettings.Development.json
+++ b/Back/src/ProEventos.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Data Source=ProEventos.db"
+    "Default":"Data Source=ProEventos.db"
   },
   "Logging": {
     "LogLevel": {
