--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~11.2.14",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "bootstrap": "^4.6.2",
+    "i": "^0.3.7",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-spinner": "^11.0.2",
+    "ngx-toastr": "^11.3.3",
+    "npm": "^9.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
