Sessão 8: reactive forms e mudança de layout

--- a/Front/ProEventos-App/tsconfig.json
+++ b/Front/ProEventos-App/tsconfig.json
@@ -21,10 +21,8 @@
       "dom"
     ]
   },
-  "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
+  "paths": {
+    "@app/*":"src/app/*",
+    "@envs": "src/environments/*"
   }
 }
