--- a/Front/ProEventos-App/tsconfig.json
+++ b/Front/ProEventos-App/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -24,5 +24,8 @@
   "paths": {
     "@app/*":"src/app/*",
     "@envs": "src/environments/*"
+  },
+  "angularComplilerOptions": {
+    "strictTemplates": false
   }
 }
